recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: type mismatch;
 found   : Int(0)
 required: List[Int]
		return 0;
                       ^butLast:5: error: overloaded method value + with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int <and>
  (x: String)String
 cannot be applied to (List[Int])
		return l.head+butLast(l.tail);
                             ^